<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD">


    <ImageView
        android:contentDescription="@string/logo_description"
        android:layout_width="260dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayout"
        android:weightSum="1"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView">

    <EditText
        android:id="@+id/editSignupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/SignupName"
        >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
         />

    <EditText
        android:id="@+id/editSignupPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />



    <EditText
        android:id="@+id/editSignupPassConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:onClick="createUser"
        android:text="@string/signup_label" />

    </LinearLayout>


</RelativeLayout>