<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green">


    <ImageView
        android:contentDescription="@string/logo_description"
        android:layout_width="260dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <TextView
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailLogin"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordLogin"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Lembrar-me"
            android:textColor="@color/black"
            android:id="@+id/checkBoxLembrar" />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Entrar"
            android:id="@+id/buttonEntrar"
            android:layout_gravity="center" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:id="@+id/newUser"
        android:textColor="@color/main_orange"
        android:textStyle="bold"
        android:clickable="true"
        android:linksClickable="true"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />


</RelativeLayout>